area1/team1/backstage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "7007"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: backstage
          image: registry.hub.docker.com/pacoguzman/dev-portal:a34342d
          imagePullPolicy: Always
          command: ["node"]
          args:
            - "packages/backend"
            - "--config"
            - "app-config.yaml"
            - "--config"
            - "app-config.prod.yaml"
          ports:
            - name: http
              containerPort: 7007
          volumeMounts:
            - name: config
              mountPath: /app/app-config.prod.yaml
              subPath: app-config.prod.yaml
          #readinessProbe:
          #  httpGet:
          #    port: 7007
          #    path: /healthcheck
          #livenessProbe:
          #  httpGet:
          #    port: 7007
          #    path: /healthcheck
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
      volumes:
        - name: config
          configMap:
            name: backstage-config
