area1/team1/backstage/base/redis-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  labels:
    app: redis-cache
spec:
  ports:
  - name: redis
    port: 6379
  clusterIP: None
  selector:
    app: redis-cache
